# ART_SCHOOL_SCHEDULE

./: Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
src/: __init__.py  cli.py  main.py
src/api/: router.py  schedule.py
src/common/: constants.py  utils.py
src/parsers/: __init__.py  schedule.py  serializer.py  settings.py
src/processors/: checker.py  excel.py
src/processors/generator/: generator.py  structures.py
tests/api/: test_api.py
tests/test_files/: Template.xlsx  schedule.xml  settings.xml
